@@ -60,7 +60,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Compiler plugin -->
+            <!-- Compiler plugin — enable Java 21 features -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -68,6 +68,9 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
